--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -99,15 +99,21 @@ a {
 
 /* line 98, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .inner, .clock {
-  padding: 25px 100px 25px 100px;
-  position: relative;
+  padding: 25px 100px 15px 100px;
+  position: absolute;
   width: 100%;
   height: 100%;
   box-sizing: border-box; }
 
 /* line 106, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+.inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center; }
+
+/* line 113, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .clock {
-  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -115,25 +121,26 @@ a {
   color: #ffffff;
   font-family: "Source Sans Pro", Helvetica, sans-serif; }
 
-/* line 116, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 122, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .clock span {
   display: block;
   font-weight: 200; }
 
-/* line 121, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 127, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .hidden {
-  display: none; }
+  display: none !important; }
 
 /* HEADER */
-/* line 126, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 132, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .header {
   text-transform: uppercase;
   font-weight: 200;
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  width: 100%; }
 
-/* line 134, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 141, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .header div {
   width: 100%;
   height: 50px;
@@ -141,36 +148,36 @@ a {
   align-items: center;
   justify-content: flex-start; }
 
-/* line 142, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 149, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 #time {
   font-size: 1.2em; }
 
-/* line 146, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 153, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .header .center {
   text-align: center;
   justify-content: center; }
 
-/* line 151, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 158, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .header .right {
   text-align: right;
   justify-content: flex-end; }
 
-/* line 156, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 163, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .header .icon {
   height: 25px;
   width: auto; }
 
-/* line 161, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 168, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .header .gps-icon {
   height: 12px;
   margin-left: 12px;
   opacity: .8; }
 
-/* line 167, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 174, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .header .header-button:hover {
   cursor: pointer; }
 
-/* line 171, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 178, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .header .header-button {
   width: 50px;
   height: 50px;
@@ -181,17 +188,17 @@ a {
   align-items: center;
   justify-content: center; }
 
-/* line 182, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 189, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .header .header-button:active {
   background-color: #008cff; }
 
-/* line 186, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 193, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 span.tab {
   display: inline-block;
   margin-left: 15px; }
 
 /* CONTENT */
-/* line 194, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 201, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .content {
   position: relative;
   display: block;
@@ -202,13 +209,13 @@ span.tab {
   box-sizing: border-box;
   text-align: center; }
 
-/* line 205, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 212, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .weather {
   overflow: visible;
   height: auto;
   width: 100%; }
 
-/* line 213, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 220, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .weather .weather-icon {
   padding-top: 60px;
   display: block;
@@ -220,14 +227,14 @@ span.tab {
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards; }
 
-/* line 225, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 232, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .weather .weather-icon.up {
   animation: up 0.4s ease-in-out;
   animation-iteration-count: 1;
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards; }
 
-/* line 232, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 239, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .weather .text {
   display: block;
   overflow: hidden;
@@ -237,7 +244,7 @@ span.tab {
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards; }
 
-/* line 242, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 249, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .weather .text.hide {
   animation: hide 0.4s ease-in-out;
   animation-iteration-count: 1;
@@ -286,14 +293,14 @@ span.tab {
     opacity: 1;
     max-height: 395px; } }
 
-/* line 305, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 312, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .weather .text {
   font-size: 1.6em;
   line-height: 1.4em;
   letter-spacing: .03em; }
 
 /* WIDGET CONTENT */
-/* line 312, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 319, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .widget {
   height: 0;
   display: block;
@@ -305,7 +312,7 @@ span.tab {
   transition: 0.3s;
   overflow: hidden; }
 
-/* line 324, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 331, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .widget.active {
   animation: widget-show 0.4s ease-in-out;
   animation-iteration-count: 1;
@@ -325,7 +332,7 @@ span.tab {
     height: 395px; } }
 
 /* MIRROR */
-/* line 348, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 355, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 #mirrorVideo {
   position: relative;
   width: 100%;
@@ -334,9 +341,10 @@ span.tab {
   transform: rotateY(180deg); }
 
 /* ACTIONS */
-/* line 357, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 364, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .actions {
   height: 20%;
+  min-height: 240px;
   width: 100%;
   position: relative;
   display: flex;
@@ -345,7 +353,7 @@ span.tab {
   box-sizing: border-box;
   padding-top: 60px; }
 
-/* line 368, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 376, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .action, a.action {
   width: 180px;
   height: 180px;
@@ -357,15 +365,15 @@ span.tab {
   align-items: center;
   transition: background 0.15s; }
 
-/* line 380, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 388, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .action:hover {
   cursor: pointer; }
 
-/* line 384, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 392, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .action.active, .action:active {
   background-color: #008cff; }
 
-/* line 388, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+/* line 396, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
 .action-icon {
   height: 50px;
   width: auto;
@@ -374,48 +382,59 @@ span.tab {
   box-sizing: border-box; }
 
 @media (max-width: 1335px) {
-  /* line 397, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+  /* line 405, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
   .inner {
     padding: 20px 50px 20px 50px; } }
 
 @media (max-width: 1200px) {
-  /* line 403, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+  /* line 411, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+  .actions {
+    min-height: 200px; }
+  /* line 415, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
   .action {
     width: 140px;
     height: 140px;
     border-radius: 140px; }
-  /* line 409, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+  /* line 421, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
   .action-icon {
     height: 40px; } }
 
 @media (max-width: 980px) {
-  /* line 415, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+  /* line 427, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
   .actions {
+    height: 240px;
     display: block;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
     padding-bottom: 12px; }
-  /* line 423, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
-  .action {
+  /* line 436, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+  .action, a.action {
     display: inline-flex;
     margin-right: 15px; }
-  /* line 429, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+  /* line 441, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
   .actions::-webkit-scrollbar {
     height: 10px; }
-  /* line 433, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+  /* line 445, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
   .actions::-webkit-scrollbar-track {
     background-color: transparent; }
-  /* line 437, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+  /* line 449, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
   .actions::-webkit-scrollbar-thumb {
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 100px;
     transition: background-color 0.15s; }
-  /* line 443, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+  /* line 455, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
   .actions::-webkit-scrollbar-thumb:active {
     background-color: rgba(255, 255, 255, 0.5); }
-  /* line 447, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+  /* line 459, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
   .actions::-webkit-scrollbar-button {
     background-color: transparent; } }
+
+@media (max-height: 730px) {
+  /* line 466, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
+  .inner {
+    display: block;
+    position: relative;
+    height: auto; } }
 
 /*# sourceMappingURL=style.css.map */
