--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -96,15 +96,21 @@ a {
 }
 
 .inner, .clock {
-    padding: 25px 100px 25px 100px;
-    position: relative;
+    padding: 25px 100px 15px 100px;
+    position: absolute;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
 }
 
+.inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .clock {
-    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -119,7 +125,7 @@ a {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 /* HEADER */
@@ -129,6 +135,7 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 .header div {
@@ -356,6 +363,7 @@ $anim-time: 0.4s;
 /* ACTIONS */
 .actions {
     height: 20%;
+    min-height: 240px;
     width: 100%;
     position: relative;
     display: flex;
@@ -400,6 +408,10 @@ $anim-time: 0.4s;
 }
 
 @media (max-width: 1200px) {
+    .actions {
+        min-height: 200px;    
+    }
+    
     .action {
         width: 140px;
         height: 140px;
@@ -413,6 +425,7 @@ $anim-time: 0.4s;
 
 @media (max-width: 980px) {
     .actions {
+        height: 240px;
         display: block;
         overflow-x: scroll;
         overflow-y: hidden;
@@ -420,11 +433,10 @@ $anim-time: 0.4s;
         padding-bottom: 12px;
     }
 
-    .action {
+    .action, a.action {
         display: inline-flex;
         margin-right: 15px;
     }
-
 
     .actions::-webkit-scrollbar {
         height: 10px;
@@ -448,4 +460,12 @@ $anim-time: 0.4s;
         background-color: rgba(0,0,0,0);
     }
 
+}
+
+@media (max-height: 730px) {
+    .inner {
+        display: block;
+        position: relative;
+        height: auto;
+    }
 }
