Fixing small details

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -185,7 +185,7 @@ a {
   border-radius: 50px;
   transition: background 0.15s;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center; }
 
 /* line 189, C:/Users/ariel_000/Documents/Web/Dashboard/newday/stylesheets/style.scss */
