--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -182,7 +182,7 @@ a {
     border-radius: 50px;
     transition: background 0.15s;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
 }
 
