--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -254,28 +254,50 @@ $anim-time: 0.4s;
 }
 
 @keyframes up {
-    from { 
+    0% { 
         transform: translate(0,0);
         font-size: 14em;
+        max-height: 400px;
     }
-    to { 
-        transform: translate(0,-85px);
+    45% {
+        max-height: 1px;
+        height: 1px;
+        padding-top: 0;
+        transform: translate(0,0);
         font-size: 1.5em;
-        max-height: 0;
+    }
+    50% {
+        max-height: 1px;
+        height: 1px;
+        padding-top: 0;
+        transform: translate(0,0);
+        font-size: 1.5em;
+    }
+    100% {
+        transform: translate(0,-10600%);
+        max-height: 1px;
+        font-size: 1.5em;
         padding-top: 0px;
     }
 }
 
 @keyframes down {
-    from {
-        transform: translate(0,-85px);
+    0% {
+        transform: translate(0,-10600%);
         font-size: 1.5em;
-        max-height: 0;
+        max-height: 1px;
         padding-top: 0px;
     }
-    to {
+    50% {
+        transform: translate(0,0);
+        font-size: 1.5em;
+        max-height: 1px;
+        padding-top: 0px;
+    }
+    100% {
         transform: translate(0,0);
         font-size: 14em;
+        max-height: 400px;
         padding-top: 60px;
     }
 }
