--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -339,15 +339,18 @@ $anim-time: 0.4s;
 
 /* WIDGET CONTENT */
 .widget {
+    position: absolute;
     height: 0;
     display: block;
-    margin: 0 auto;
+    margin: auto;
+    left: 0;
+    right: 0;
     width: 70%;
-    position: relative;
     opacity: 0;
     border-radius: 20px;
     transition: 0.3s;
     overflow: hidden;
+    z-index: 100;
 }
 
 .widget.active {
@@ -382,6 +385,181 @@ $anim-time: 0.4s;
     transform: rotateY(180deg);
 }
 
+/* TODO */
+.todo {
+    margin-top: 20px;
+    border-radius: 0;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    overflow: visible;
+}
+
+.nothing {
+    width: 100%;
+    height: 80%;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+    display: none;
+}
+
+.nothing.active {
+    display: flex;
+}
+
+.addTodo {
+    width: 100%;
+    height: 50px;
+    overflow-x: visible;
+    box-sizing: border-box;
+    text-align: left;
+    padding-left: 25px;
+    padding-right: 25px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+}
+
+.addTodo input {
+    border: 0;
+    border-bottom: 1px solid white;
+    padding: 8px;
+    box-sizing: border-box;
+    color: white;
+    background: none;
+    outline: none;
+    width: 80%;
+    text-align: left;
+    font-family: $font-fam;
+    font-size: 1.2em;
+    flex: 1;
+    margin-right: 20px;
+    opacity: 0.5;
+    transition: opacity 0.2s;
+}
+
+.addTodo input:focus, .addTodo input:focus + img {
+    opacity: 1;
+}
+
+.addTodo img {
+    width: 30px;
+    height: auto;
+    opacity: 0.5;
+    transition: opacity 0.2s;
+}
+
+.addTodo:hover {
+    cursor: pointer;
+}
+
+.todo ul {
+    width: 100%;
+    height: 90%;
+    list-style: none;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding-right: 20px;
+    padding-left: 20px;
+    box-sizing: border-box;
+    flex: 1;
+}
+
+.todo ul input[type=checkbox] {
+    visibility: hidden;
+    position: absolute;
+    left: -100px;
+}
+
+.todo ul li {
+    margin-bottom: 20px;
+}
+
+.todo ul li label {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: rgba(255,255,255,0.3);
+    box-sizing: border-box;
+    border-radius: 30px;
+    padding: 15px;
+    position: relative;
+    width: 100%;
+    height: auto;
+    transition: opacity 0.1s;
+}
+
+.todo ul li label .box {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    transform: translate(10,0);
+    border: 2px solid white;
+    background-color: 0;
+    margin-right: 15px;
+    margin-left: 15px;
+    transition: background 0.1s;
+}
+
+.todo ul li label .remove {
+    height: 12px;
+    width: auto;
+    margin-right: 15px;
+    margin-left: 15px;
+    opacity: .5;
+    transition: opacity 0.1s;
+}
+
+.todo ul li label .remove:hover {
+    cursor: pointer;
+    opacity: 1;
+}
+
+.todo ul li input[type=checkbox]:checked + label .box {
+    background-color: white;
+}
+
+.todo ul li input[type=checkbox]:checked + label {
+    opacity: 0.5;
+}
+
+.todo ul li label span {
+    display: inline-block;
+    font-size: 1.5em;
+    line-height: 1.3em;
+    flex: 1;
+}
+
+.todo ul li label:hover {
+    cursor: pointer;
+}
+
+.todo ul::-webkit-scrollbar {
+    width: 10px;
+}
+
+.todo ul::-webkit-scrollbar-track {
+    background-color: rgba(0,0,0,0);
+}
+
+.todo ul::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.3); 
+    border-radius: 100px;
+    transition: background-color 0.15s;
+}
+
+.todo ul::-webkit-scrollbar-thumb:active {
+    background-color: rgba(255, 255, 255, 0.5); 
+}
+
+.todo ul::-webkit-scrollbar-button {
+    background-color: rgba(0,0,0,0);
+}
+
 /* ACTIONS */
 .actions {
     height: 20%;
@@ -393,6 +571,7 @@ $anim-time: 0.4s;
     align-items: center;
     box-sizing: border-box;
     padding-top: 60px;
+    z-index: 10;
 }
 
 .action, a.action {
@@ -433,7 +612,7 @@ $anim-time: 0.4s;
     .actions {
         min-height: 200px;    
     }
-    
+
     .action {
         width: 140px;
         height: 140px;
@@ -482,6 +661,9 @@ $anim-time: 0.4s;
         background-color: rgba(0,0,0,0);
     }
 
+    .widget {
+        width: 80%;
+    }
 }
 
 @media (max-height: 730px) {
